--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,89 +1,111 @@
 <section>
     <mat-toolbar>
-        <button mat-raised-button color="primary" (click)="sidenav.toggle()">Filter</button>
+        <button mat-raised-button color="primary" (click)="sidenav.toggle()">Find</button>
     </mat-toolbar>
 
     <mat-sidenav-container>
         <mat-sidenav mode="over" #sidenav>
-           <mat-card class="filters">
-            <mat-card-header fxLayoutAlign="center center">
-                <mat-card-title id="card-title">
-                    <mat-label class="primary-color">Search</mat-label>
-                </mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
-                <mat-form-field hintLabel="Search by title or description...">
-                    <mat-label>Search for products:</mat-label>
-                    <input matInput [(ngModel)]="searchValue" placeholder="Ex. HDD" (keyup)="search($event.target.value)">
-                </mat-form-field>
-            </mat-card-content>
-        </mat-card>
+            <section fxLayoutAlign="center center" width="100%">
+                <mat-tab-group color="primary" mat-stretch-tabs>
+                    <mat-tab label="Search">
+                        <mat-card class="filters">
+                            <mat-card-header fxLayoutAlign="center center">
+                                <mat-card-title id="card-title">
+                                    <mat-label class="primary-color">Search</mat-label>
+                                </mat-card-title>
+                            </mat-card-header>
+                            <mat-card-content>
+                                <mat-form-field hintLabel="Search by title or description...">
+                                    <mat-label>Search for products:</mat-label>
+                                    <input matInput [(ngModel)]="searchValue" placeholder="Ex. HDD"
+                                        (keyup)="search($event.target.value)">
+                                </mat-form-field>
+                            </mat-card-content>
+                        </mat-card>
+                    </mat-tab>
+                    <mat-tab label="Apply filters">
+                        <mat-card class="filters">
+                            <mat-card-header fxLayoutAlign="center center">
+                                <mat-card-title id="card-title">
+                                    <mat-label class="primary-color">Filters</mat-label>
+                                </mat-card-title>
+                            </mat-card-header>
+                            <mat-card-content>
+                                <section fxLayoutAlign="center center">
+                                    <mat-tab-group color="primary" mat-stretch-tabs>
+                                        <mat-tab label="By categories">
+                                            <mat-form-field>
+                                                <mat-select [formControl]="categories" multiple placeholder="Select categories...">
+                                                    <mat-option *ngFor="let category of categoryList" [value]="category">{{
+                                                        category.name }}</mat-option>
+                                                </mat-select>
+                                            </mat-form-field>
+                                        </mat-tab>
+                                        <mat-tab label="By subcategories">
+                                            <mat-form-field>
+                                                <mat-select [formControl]="categories" multiple
+                                                    placeholder="Select subcategories...">
+                                                    <mat-option *ngFor="let category of categoryList" [value]="category">{{
+                                                        category.name }}</mat-option>
+                                                </mat-select>
+                                            </mat-form-field>
+                                        </mat-tab>
+                                    </mat-tab-group>
+                                </section>
+                                <hr />
+                                <mat-form-field>
+                                    <mat-select [formControl]="categories" multiple placeholder="Select countries...">
+                                        <mat-option *ngFor="let category of categoryList" [value]="category">{{ category.name }}
+                                        </mat-option>
+                                    </mat-select>
+                                </mat-form-field>
+                                <hr />
+                                <div fxLayoutAlign="center center" fxLayout="column">
+                                    <mat-label>Maximum price: </mat-label>
+                                    <mat-slider color="primary" thumbLabel min="0" max="10000" [(ngModel)]="sliderValue" #slider
+                                        (change)="getByPrice(slider.value)">Max price:
+                                    </mat-slider>
+                                </div>
+                                <hr />
+                                <div fxLayoutAlign="center center" fxLayout="column">
+                                    <mat-label>Minimum rating: </mat-label>
+                                    <bar-rating [(ngModel)]="rating" [max]="5" [theme]="'default'" (rateChange)="change()">
+                                    </bar-rating>
+                                </div>
+                            </mat-card-content>
+                        </mat-card>
+                    </mat-tab>
+                </mat-tab-group>
+            </section>
 
-        <mat-card class="filters">
-            <mat-card-header fxLayoutAlign="center center">
-                <mat-card-title id="card-title">
-                    <mat-label class="primary-color">Filters</mat-label>
-                </mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
-                <mat-form-field>
-                    <mat-select [formControl]="categories" multiple placeholder="Select categories...">
-                        <mat-option *ngFor="let category of categoryList" [value]="category">{{ category.name }}</mat-option>
-                    </mat-select>
-                </mat-form-field>
-                <hr />
-                <mat-form-field>
-                    <mat-select [formControl]="categories" multiple placeholder="Select subcategories...">
-                        <mat-option *ngFor="let category of categoryList" [value]="category">{{ category.name }}</mat-option>
-                    </mat-select>
-                </mat-form-field>
-                <hr />
-                <mat-form-field>
-                    <mat-select [formControl]="categories" multiple placeholder="Select countries...">
-                        <mat-option *ngFor="let category of categoryList" [value]="category">{{ category.name }}</mat-option>
-                    </mat-select>
-                </mat-form-field>
-                <hr />
-                <div fxLayoutAlign="center center" fxLayout="column">
-                    <mat-label>Maximum price: </mat-label>
-                    <mat-slider color="primary" thumbLabel min="0" max="10000" [(ngModel)]="sliderValue" #slider
-                        (change)="getByPrice(slider.value)">Max price:
-                    </mat-slider>
-                </div>
-                <hr />
-                <div fxLayoutAlign="center center" fxLayout="column">
-                    <mat-label>Minimum rating: </mat-label>
-                    <bar-rating [(ngModel)]="rating" [max]="5" [theme]="'default'" (rateChange)="change()"></bar-rating>
-                </div>
-            </mat-card-content>
-        </mat-card>
+            
         </mat-sidenav>
 
         <mat-sidenav-content>
-                <section class="content "fxLayoutAlign="center center" fxLayout="column">
-                
-                    <mat-grid-list cols="3" rowHeight="1:1.2" gutterSize="10vh" id="grid">
-                        <mat-grid-tile *ngFor="let product of products">
-                            <mat-card fxLayout="column">
-                                <mat-card-header fxLayoutAlign="center center">
-                                    <mat-card-title>{{ product.name }}
-                                        <hr />
-                                    </mat-card-title>
-                                </mat-card-header>
-                                <mat-card-content class="product-content">
-                                    <img [src]="product.imageURL">
-                                    <p>Description: {{ product.description | slice:0:200 }}...</p>
+            <section class="content " fxLayoutAlign="center center" fxLayout="column">
+
+                <mat-grid-list cols="3" rowHeight="1:1.2" gutterSize="10vh" id="grid">
+                    <mat-grid-tile *ngFor="let product of products">
+                        <mat-card fxLayout="column">
+                            <mat-card-header fxLayoutAlign="center center">
+                                <mat-card-title>{{ product.name }}
                                     <hr />
-                                    <p>Price: {{ product.price }}EUR</p>
-                                </mat-card-content>
-                                <mat-card-action fxLayoutAlign="space-evenly center">
-                                    <a mat-raised-button color="primary" (click)="loadDetails(product.id)">Details</a>
-                                    <a mat-raised-button color="primary" (click)="addToCart(product.id)">Add to cart</a>
-                                </mat-card-action>
-                            </mat-card>
-                        </mat-grid-tile>
-                    </mat-grid-list>
-                </section>
+                                </mat-card-title>
+                            </mat-card-header>
+                            <mat-card-content class="product-content">
+                                <img [src]="product.imageURL">
+                                <p>Description: {{ product.description | slice:0:200 }}...</p>
+                                <hr />
+                                <p>Price: {{ product.price }}EUR</p>
+                            </mat-card-content>
+                            <mat-card-action fxLayoutAlign="space-evenly center">
+                                <a mat-raised-button color="primary" (click)="loadDetails(product.id)">Details</a>
+                                <a mat-raised-button color="primary" (click)="addToCart(product.id)">Add to cart</a>
+                            </mat-card-action>
+                        </mat-card>
+                    </mat-grid-tile>
+                </mat-grid-list>
+            </section>
         </mat-sidenav-content>
     </mat-sidenav-container>
 </section>
