--- a/src/app/orders/orders/orders.component.css
+++ b/src/app/orders/orders/orders.component.css
@@ -2,7 +2,7 @@ section {
     height: 90vh;
 }
 mat-card {
-    width: 50%;
+    width: 90%;
     margin: auto;
 }
 mat-card-content {
@@ -10,4 +10,21 @@ mat-card-content {
 }
 table {
     width: 100%;
+}
+mat-expansion-panel {
+    width: 80%;
+    margin: 1vh 1vw;
+}
+.product-container {
+    width: 100%;
+}
+.col {
+    width: 15vw;
+}
+.row {
+    border-bottom: 1px solid black;
+    margin-bottom: 0vh;
+}
+h4 {
+    margin-bottom: 0vh;
 }
