--- a/src/app/orders/orders/orders.component.html
+++ b/src/app/orders/orders/orders.component.html
@@ -4,21 +4,104 @@
             <mat-card-title>Order history</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-            
+
             <table mat-table [dataSource]="orders" matSort>
                 <ng-container matColumnDef="number">
-                  <th mat-header-cell *matHeaderCellDef> No. </th>
-                  <td mat-cell *matCellDef="let element; let i = index"> {{i + 1}} </td>
+                    <th mat-header-cell *matHeaderCellDef> No. </th>
+                    <td mat-cell *matCellDef="let element; let i = index"> {{i + 1}} </td>
                 </ng-container>
-              
+
+                <ng-container matColumnDef="datetime">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Date and time </th>
+                    <td mat-cell *matCellDef="let element"> 2020-01-01 08:00 </td>
+                </ng-container>
+
+                <ng-container matColumnDef="address">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Address </th>
+                    <td mat-cell *matCellDef="let element"> Royal Street 6 </td>
+                </ng-container>
+
                 <ng-container matColumnDef="amount">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Amount </th>
-                  <td mat-cell *matCellDef="let element"> {{element.amount}}EUR </td>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Amount </th>
+                    <td mat-cell *matCellDef="let element"> {{element.amount}}EUR </td>
                 </ng-container>
-              
-                <ng-container matColumnDef="count">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Number of products </th>
-                  <td mat-cell *matCellDef="let element"> {{element.count}} </td>
+
+                <ng-container matColumnDef="products">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Products </th>
+                    <td mat-cell *matCellDef="let element">
+                        <mat-accordion>
+                            <mat-expansion-panel>
+                                <mat-expansion-panel-header>
+                                    <mat-panel-title>
+                                        Products
+                                    </mat-panel-title>
+                                    <mat-panel-description>
+                                        Click to show the products
+                                    </mat-panel-description>
+                                </mat-expansion-panel-header>
+                                <div class="product-container">
+                                    <table mat-table [dataSource]="products" matSort>
+                                        <ng-container matColumnDef="number">
+                                            <th mat-header-cell *matHeaderCellDef> No. </th>
+                                            <td mat-cell *matCellDef="let element; let i = index"> {{i + 1}} </td>
+                                        </ng-container>
+
+                                        <ng-container matColumnDef="name">
+                                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+                                            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                                        </ng-container>
+
+                                        <ng-container matColumnDef="quantity">
+                                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Quantity </th>
+                                            <td mat-cell *matCellDef="let element"> 1 </td>
+                                        </ng-container>
+
+                                        <ng-container matColumnDef="rating">
+                                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Rating </th>
+                                            <td mat-cell *matCellDef="let element">
+                                                <bar-rating [max]="5" [theme]="'default'" [rate]="element.rating"></bar-rating>
+                                            </td>
+                                        </ng-container>
+
+                                        <ng-container matColumnDef="product-details">
+                                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Product details </th>
+                                            <td mat-cell *matCellDef="let element">
+                                                <button mat-raised-button color="primary">
+                                                    <mat-icon>search</mat-icon>
+                                                </button>
+                                            </td>
+                                        </ng-container>
+
+                                        <tr mat-header-row *matHeaderRowDef="productDisplayedColumns"></tr>
+                                        <tr mat-row *matRowDef="let row; columns: productDisplayedColumns;"></tr>
+                                    </table>
+                                </div>
+                            </mat-expansion-panel>
+                        </mat-accordion>
+                    </td>
+                </ng-container>
+
+                <ng-container matColumnDef="status">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+                    <td mat-cell *matCellDef="let element"> In progress </td>
+                </ng-container>
+
+                <ng-container matColumnDef="received">
+                    <th mat-header-cell *matHeaderCellDef> Received </th>
+                    <td mat-cell *matCellDef="let element">
+                        <button mat-raised-button color="primary" (click)="deleteById(element.id)">
+                            <mat-icon>check_circle_outline</mat-icon>
+                        </button>
+                    </td>
+                </ng-container>
+
+                <ng-container matColumnDef="cancel">
+                    <th mat-header-cell *matHeaderCellDef> Cancel </th>
+                    <td mat-cell *matCellDef="let element">
+                        <button mat-raised-button color="primary" (click)="deleteById(element.id)">
+                            <mat-icon>cancel</mat-icon>
+                        </button>
+                    </td>
                 </ng-container>
 
                 <ng-container matColumnDef="remove">
@@ -29,11 +112,11 @@
                         </button>
                     </td>
                 </ng-container>
-              
+
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-              </table>
-              <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+            </table>
+            <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
         </mat-card-content>
         <mat-card-actions fxLayoutAlign="space-evenly center">
             <button mat-raised-button color="primary" routerLink="">
