--- a/src/app/shopping-cart/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart/shopping-cart.component.html
@@ -9,7 +9,7 @@
         </mat-card-header>
         <mat-card-content>
             
-            <table mat-table [dataSource]="shoppingCart?.products">
+            <table mat-table [dataSource]="shoppingCart?.productCountList">
                 <ng-container matColumnDef="number">
                   <th mat-header-cell *matHeaderCellDef> No. </th>
                   <td mat-cell *matCellDef="let element; let i = index"> {{i + 1}} </td>
@@ -18,20 +18,20 @@
               
                 <ng-container matColumnDef="name">
                   <th mat-header-cell *matHeaderCellDef> Name </th>
-                  <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                  <td mat-cell *matCellDef="let element"> {{element.product.name}} </td>
                   <td mat-footer-cell *matFooterCellDef></td>
                 </ng-container>
               
                 <ng-container matColumnDef="price">
                   <th mat-header-cell *matHeaderCellDef> Price </th>
-                  <td mat-cell *matCellDef="let element"> {{element.price}}EUR </td>
+                  <td mat-cell *matCellDef="let element"> {{element.product.price}}EUR </td>
                   <td mat-footer-cell *matFooterCellDef>Amount: {{ shoppingCart?.amount }}EUR</td>
                 </ng-container>
 
                 <ng-container matColumnDef="decrease">
                     <th mat-header-cell *matHeaderCellDef> Decrease </th>
                     <td mat-cell *matCellDef="let element">
-                        <button mat-raised-button color="primary" (click)="decreaseProduct(element.id)">
+                        <button mat-raised-button color="primary" (click)="decreaseProduct(element.product.id, element.count)">
                             <mat-icon>remove</mat-icon>
                         </button>
                     </td>
@@ -40,14 +40,14 @@
 
                 <ng-container matColumnDef="quantity">
                     <th mat-header-cell *matHeaderCellDef> Quantity </th>
-                    <td mat-cell *matCellDef="let element">3</td>
+                    <td mat-cell *matCellDef="let element">{{element.count}}</td>
                     <td mat-footer-cell *matFooterCellDef></td>
                 </ng-container>
 
                 <ng-container matColumnDef="increase">
                     <th mat-header-cell *matHeaderCellDef> Increase </th>
                     <td mat-cell *matCellDef="let element">
-                        <button mat-raised-button color="primary" (click)="increaseProduct(element.id)">
+                        <button mat-raised-button color="primary" (click)="increaseProduct(element.product.id)">
                             <mat-icon>add</mat-icon>
                         </button>
                     </td>
@@ -57,7 +57,7 @@
                 <ng-container matColumnDef="remove">
                     <th mat-header-cell *matHeaderCellDef> Remove </th>
                     <td mat-cell *matCellDef="let element">
-                        <button mat-raised-button color="primary" (click)="removeProduct(element.id)">
+                        <button mat-raised-button color="primary" (click)="removeProduct(element.product.id)">
                             <mat-icon>delete</mat-icon>
                         </button>
                     </td>
