--- a/src/app/orders/orders/orders.component.html
+++ b/src/app/orders/orders/orders.component.html
@@ -13,12 +13,12 @@
 
                 <ng-container matColumnDef="datetime">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Date and time </th>
-                    <td mat-cell *matCellDef="let element"> 2020-01-01 08:00 </td>
+                    <td mat-cell *matCellDef="let element"> {{element.dateCreated}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="address">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Address </th>
-                    <td mat-cell *matCellDef="let element"> Royal Street 6 </td>
+                    <td mat-cell *matCellDef="let element"> {{element.address}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="amount">
@@ -27,7 +27,7 @@
                 </ng-container>
 
                 <ng-container matColumnDef="products">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Products </th>
+                    <th mat-header-cell *matHeaderCellDef> Products </th>
                     <td mat-cell *matCellDef="let element">
                         <mat-accordion>
                             <mat-expansion-panel>
@@ -40,33 +40,28 @@
                                     </mat-panel-description>
                                 </mat-expansion-panel-header>
                                 <div class="product-container">
-                                    <table mat-table [dataSource]="products" matSort>
+                                    <table mat-table [dataSource]="element.products" matSort>
                                         <ng-container matColumnDef="number">
                                             <th mat-header-cell *matHeaderCellDef> No. </th>
-                                            <td mat-cell *matCellDef="let element; let i = index"> {{i + 1}} </td>
+                                            <td mat-cell *matCellDef="let product; let i = index"> {{i + 1}} </td>
                                         </ng-container>
 
                                         <ng-container matColumnDef="name">
                                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-                                            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-                                        </ng-container>
-
-                                        <ng-container matColumnDef="quantity">
-                                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Quantity </th>
-                                            <td mat-cell *matCellDef="let element"> 1 </td>
+                                            <td mat-cell *matCellDef="let product"> {{product.name}} </td>
                                         </ng-container>
 
                                         <ng-container matColumnDef="rating">
                                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Rating </th>
-                                            <td mat-cell *matCellDef="let element">
-                                                <bar-rating [max]="5" [theme]="'default'" [rate]="element.rating"></bar-rating>
+                                            <td mat-cell *matCellDef="let product">
+                                                <bar-rating [readOnly]="element.state != 'RECEIVED' || getReviewValue(product.id, element.id) != undefined" [max]="5" [theme]="'default'" #review [rate]="getReviewValue(product.id, element.id)" (rateChange)="addReview(review, product.id, element.id)"></bar-rating>
                                             </td>
                                         </ng-container>
 
                                         <ng-container matColumnDef="product-details">
-                                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Product details </th>
-                                            <td mat-cell *matCellDef="let element">
-                                                <button mat-raised-button color="primary">
+                                            <th mat-header-cell *matHeaderCellDef> Product details </th>
+                                            <td mat-cell *matCellDef="let product">
+                                                <button mat-raised-button color="primary" (click)="loadDetails(product.id)">
                                                     <mat-icon>search</mat-icon>
                                                 </button>
                                             </td>
@@ -82,14 +77,14 @@
                 </ng-container>
 
                 <ng-container matColumnDef="status">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-                    <td mat-cell *matCellDef="let element"> In progress </td>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> State </th>
+                    <td mat-cell *matCellDef="let element"> {{element.state}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="received">
                     <th mat-header-cell *matHeaderCellDef> Received </th>
                     <td mat-cell *matCellDef="let element">
-                        <button mat-raised-button color="primary" (click)="deleteById(element.id)">
+                        <button [disabled]="element.state != 'IN_PROGRESS'" mat-raised-button color="primary" (click)="markReceived(element.id)">
                             <mat-icon>check_circle_outline</mat-icon>
                         </button>
                     </td>
@@ -98,7 +93,7 @@
                 <ng-container matColumnDef="cancel">
                     <th mat-header-cell *matHeaderCellDef> Cancel </th>
                     <td mat-cell *matCellDef="let element">
-                        <button mat-raised-button color="primary" (click)="deleteById(element.id)">
+                        <button [disabled]="element.state != 'IN_PROGRESS'" mat-raised-button color="primary" (click)="markCanceled(element.id)">
                             <mat-icon>cancel</mat-icon>
                         </button>
                     </td>
