--- a/src/app/product/product-details/product-details.component.html
+++ b/src/app/product/product-details/product-details.component.html
@@ -17,7 +17,7 @@
                     </div>
                     <div class="column">
                         <h3 class="label">RATING</h3>
-                        <bar-rating [max]="5" [theme]="'default'"></bar-rating>
+                        <bar-rating readOnly="true" [max]="5" [theme]="'default'" [rate]="product?.averageReviewValue"></bar-rating>
                     </div>
                 </section>
                 <div>
@@ -48,7 +48,7 @@
                                 </mat-panel-description>
                             </mat-expansion-panel-header>
                             <div class="product-container">
-                                <table mat-table [dataSource]="reviews" matSort>
+                                <table mat-table [dataSource]="product?.reviews" matSort>
                                     <ng-container matColumnDef="number">
                                         <th mat-header-cell *matHeaderCellDef> No. </th>
                                         <td mat-cell *matCellDef="let element; let i = index"> {{i + 1}} </td>
@@ -56,13 +56,13 @@
 
                                     <ng-container matColumnDef="name">
                                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-                                        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                                        <td mat-cell *matCellDef="let element"> {{element.user?.firstName + " " + element.user?.lastName}} </td>
                                     </ng-container>
 
                                     <ng-container matColumnDef="rating">
                                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Rating </th>
                                         <td mat-cell *matCellDef="let element">
-                                            <bar-rating [max]="5" [theme]="'default'" [rate]="element.rating"></bar-rating>
+                                            <bar-rating readOnly="true" [max]="5" [theme]="'default'" [rate]="element?.value"></bar-rating>
                                         </td>
                                     </ng-container>
 
