--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,7 +24,7 @@
                         </mat-card>
                     </mat-tab>
                     <mat-tab label="Apply filters">
-                        <form #form="ngForm" (ngSubmit)="onSubmit(form)">
+                        <form (ngSubmit)="onSubmit()">
                             <mat-card class="filters">
                                 <mat-card-header fxLayoutAlign="center center">
                                     <mat-card-title id="card-title">
