--- a/src/app/orders/orders/orders.component.html
+++ b/src/app/orders/orders/orders.component.html
@@ -5,6 +5,11 @@
         </mat-card-header>
         <mat-card-content>
 
+            <mat-form-field>
+                <mat-label>Search...</mat-label>
+                <input matInput (keyup)="search(input.value)" placeholder="Ex. Received" #input>
+              </mat-form-field>
+
             <table mat-table [dataSource]="orders" matSort>
                 <ng-container matColumnDef="number">
                     <th mat-header-cell *matHeaderCellDef> No. </th>
@@ -54,7 +59,7 @@
                                         <ng-container matColumnDef="rating">
                                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Rating </th>
                                             <td mat-cell *matCellDef="let product">
-                                                <bar-rating [readOnly]="element.state != 'RECEIVED' || getReviewValue(product.id, element.id) != undefined" [max]="5" [theme]="'default'" #review [rate]="getReviewValue(product.id, element.id)" (rateChange)="addReview(review, product.id, element.id)"></bar-rating>
+                                                <bar-rating [readOnly]="element.state != 'Received' || getReviewValue(product.id, element.id) != undefined" [max]="5" [theme]="'default'" #review [rate]="getReviewValue(product.id, element.id)" (rateChange)="addReview(review, product.id, element.id)"></bar-rating>
                                             </td>
                                         </ng-container>
 
@@ -84,7 +89,7 @@
                 <ng-container matColumnDef="received">
                     <th mat-header-cell *matHeaderCellDef> Received </th>
                     <td mat-cell *matCellDef="let element">
-                        <button [disabled]="element.state != 'IN_PROGRESS'" mat-raised-button color="primary" (click)="markReceived(element.id)">
+                        <button [disabled]="element.state != 'In progress'" mat-raised-button color="primary" (click)="markReceived(element.id)">
                             <mat-icon>check_circle_outline</mat-icon>
                         </button>
                     </td>
@@ -93,7 +98,7 @@
                 <ng-container matColumnDef="cancel">
                     <th mat-header-cell *matHeaderCellDef> Cancel </th>
                     <td mat-cell *matCellDef="let element">
-                        <button [disabled]="element.state != 'IN_PROGRESS'" mat-raised-button color="primary" (click)="markCanceled(element.id)">
+                        <button [disabled]="element.state != 'In progress'" mat-raised-button color="primary" (click)="markCanceled(element.id)">
                             <mat-icon>cancel</mat-icon>
                         </button>
                     </td>
